# inp_editing

./: .gitignore  .pdm-python  PNL.gds  README.md  abaqusMacros.py  image.py  inp.py  materials.pkl  mesh_deleted.cae  pyproject.toml  stackData.pkl  test.sqlite
src/inp_editing/: image.py  inp.py  kl_script.py  models.py
